# FourthSemesterCode

./: .gitignore  ESW1.lnk
ADS1/Assignment2/: pom.xml
ADS1/Assignment3/: pom.xml
AND1/Exercises/First session of android/: settings.gradle
AND1/Exercises/FragmentExample_start/: local.properties
AND1/Exercises/Session4Exercises/: settings.gradle
AND1/Exercises/Session4ExercisesOld/: build.gradle
AND1/Personal project/NewMyRecipe/: settings.gradle
Arduino/Arrays_with_potenciometer/: Arrays_with_potenciometer.ino
Arduino/ForLoopIteration_with__potenciometer/: ForLoopIteration_with__potenciometer.ino
Arduino/Potenciometer_led/: Potenciometer_led.ino
ESW1/: sync.ffs_db
ESW1 MirrorFile/: Session4IntefaceImplementattion  main.c  main2.c  mainSession3.c  sync.ffs_db
ESW1 MirrorFile/CLion Projects/: CMakeLists.txt  Student.c  StudentHandler.c  StudentHandler.h  StudentList.c  StudentList.h  list.c  list.h  main.c
ESW1 MirrorFile/ProjectFIle/: ProjectFIle.sln
ESW1 MirrorFile/caca/: CMakeLists.txt
ESW1/Command line projects/: celciusToFarenheit.c  mainSession3ex2.c
ESW1/Lora/: Example-Without-ADT.vcxproj  Example-Without-ADT.vcxproj.filters
ESW1/Session7/: Session7.sln
ESW1/Session7/Session7/: main.c  (+1 more)
ESW1/Session8/: Session8.sln
ESW1/Sessions 1 to 6.1/CLion projects/Session6-4/: CMakeLists.txt  HealthHandler.c  HealthHandler.h  Humidity.c  Humidity.h  Room.c  Room.h  main.c
ESW1/Sessions 1 to 6.1/CLion projects/Session6-4/Drivers/: HumidityDriver.c  TempDriver.c
ESW1/Sessions 1 to 6.1/CLion projects/Session6-4/Support/: List.c  List.h
(+378 files in other folders)
